--- a/src/client/assets/styles/search.css
+++ b/src/client/assets/styles/search.css
@@ -2,7 +2,6 @@
   position: absolute;
   top: 0;
   right: 0;
-  width: 100%;
   display: flex;
   justify-content: end;
   align-items: center;
@@ -10,7 +9,6 @@
 }
 
 #search-collapse-wrapper {
-  display: flex;
   gap: 5px;
   justify-content: end;
   align-items: center;
@@ -29,6 +27,7 @@
   filter: brightness(1.2) saturate(0.1);
   text-shadow: -2px 2px 5px black;
   padding: 0.5rem;
+  user-select: none;
 }
 
 #toggle-search-btn:hover {
@@ -53,6 +52,7 @@
 #search-title,
 #search-author,
 #search-btn {
+  display: none;
   opacity: 0;
   scale: 0;
   visibility: hidden;
